--- a/templates/index.html
+++ b/templates/index.html
@@ -163,7 +163,7 @@
             <div class="tab-pane fade show active" id="general" role="tabpanel" aria-labelledby="general-tab">
                 <div class="accordion" id="accordionExample">
                 </div></div>
-        </div>
+        </div>http://127.0.0.1:5000/,,,https://127.0.0.1:5000/
       </div>
       <div class="tab-pane fade" id="port" role="tabpanel" aria-labelledby="port-tab">
         <form action="/" method="POST">
@@ -204,8 +204,9 @@ for(let i = 0; i < data_show.length; i++) {
   for (let j = 0; j < data_show[i].options.length; j++) {
     optionsHtml += `
       <div class="radio-item">
-        
-        <label><input type="checkbox" id="disk-name" name="disk-name" value="${data_show[i].options[j]}" ${j === 0 ? 'checked' : ''}>${data_show[i].options[j]}</label>
+        <label><input type="checkbox" id="disk-name" name="disk-name" value="${data_show[i].options[j]}"
+        ${j === 0 ? 'checked' : ''}>${data_show[i].options[j]}</label>
+
       </div>
     `
   }
