--- a/templates/index.html
+++ b/templates/index.html
@@ -163,14 +163,16 @@
             <div class="tab-pane fade show active" id="general" role="tabpanel" aria-labelledby="general-tab">
                 <div class="accordion" id="accordionExample">
                 </div></div>
+        </div>
+      </div>
       <div class="tab-pane fade" id="port" role="tabpanel" aria-labelledby="port-tab">
         <form action="/" method="POST">
         <div class="radio-wrap" id="radioWrap"></div>
            <input type="hidden" id="hidden" name="hidden" value=""
                     placeholder="文件系统类型" />
           <div class="btn-list">
-            <button type="submit" class="btn btn-primary" >确定</button>
-            <button type="button" class="btn btn-primary">取消</button>
+            <button type="submit" class="btn btn-primary" id="">确定</button>
+            <button type="button" class="btn btn-primary" >取消</button>
           </div>
          
         </form>
@@ -185,7 +187,19 @@
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src={{url_for('static',filename="layer/layer.js")}}></script>
 </body>
+
+<script>
+    $('#test1').on('click', function(){
+    layer.open({
+      type: 1,
+      area: ['600px', '360px'],
+      shadeClose: true,
+      content: '\<\div style="padding:20px;">自定义内容\<\/div>'
+    });
+  });
+</script>
 
 <script>
   const data_show = {{Diskdata_pv|safe}}
