--- a/templates/index.html
+++ b/templates/index.html
@@ -172,9 +172,8 @@
       <div class="tab-pane fade show active" id="general" role="tabpanel" aria-labelledby="general-tab">
         <div>
             <h2>Disk status</h2>
-            <div class="tab-pane fade show active" id="general" role="tabpanel" aria-labelledby="general-tab">
                 <div class="accordion" id="accordionExample">
-                </div></div>
+                </div>
         </div>
       </div>
       <div class="tab-pane fade" id="port" role="tabpanel" aria-labelledby="port-tab">
