--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src={{url_for('static',filename="layer/layer.js")}}></script>
 </body>
-
+<!--url_for('static',filename="test/test1.html")-->
 <script>
     $('#test1').on('click', function(){
 	layer.open({
@@ -197,7 +197,7 @@
 	  area: ['700px', '450px'],
 	  fixed: false,
 	  maxmin: true,
-	  content: '{{url_for('static',filename="test/test1.html")}}'
+	  content: '{{url_for("layer_table")}}'
 	});
   });
 </script>
