--- a/templates/data.html
+++ b/templates/data.html
@@ -27,11 +27,42 @@ function loadXMLDoc()
 	xmlhttp.send();
 }
 </script>
+    <script src="http://echarts.baidu.com/build/dist/echarts.js"></script>
 </head>
 <body>
 
 <div id="myDiv"><h2>使用 AJAX 修改该文本内容</h2></div>
 <button type="button" onclick="loadXMLDoc()">修改内容</button>
 
+<div id="chartmain" style="width:600px; height: 400px;"></div>
+
+
 </body>
+<script>
+    var myChart = echarts.init(document.getElementById('chartmain'));
+    var option = {
+        title:{
+            text:'ECharts 数据统计'
+        },
+        tooltip:{},
+        legend:{
+            data:['用户来源']
+        },
+        xAxis:{
+            data:["Android","IOS","PC","Ohter"]
+        },
+        yAxis:{
+
+        },
+        series:[{
+            name:'访问量',
+            type:'line',
+            data:[500,200,360,100]
+        }]
+    };
+
+
+    myChart.setOption(option);
+</script>
+
 </html>
