--- a/templates/index.html
+++ b/templates/index.html
@@ -164,7 +164,7 @@
         <a class="nav-link" id="custom-tab" data-toggle="tab" href="#custom" role="tab" aria-controls="custom" aria-selected="false">LV</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="other-tab" data-toggle="tab" href="#other" role="tab" aria-controls="oter" aria-selected="false">Help</a>
+        <a class="nav-link" id="other-tab" data-toggle="tab" href="#other" role="tab" aria-controls="oter" aria-selected="false">disk</a>
       </li>
     </ul>
     <div class="tab-content" id="myTabContent" style="width:75%; margin:0 auto; float:left">
@@ -209,7 +209,10 @@
       </div>
       <div class="tab-pane fade" id="other" role="tabpanel" aria-labelledby="other-tab">
         <div>
-            <h1>test</h1>
+            <h1>
+             <iframe scrolling="no" src="https://127.0.0.1:5000/San2"  id="xxx" frameborder="1" height="500px" width="100%"></iframe>
+            
+            </h1>
         </div>
       </div>
     </div>
