--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{{url_for('static',filename='layui/css/layui.css')}}">
   <link rel="stylesheet" href="{{url_for('static',filename='css/admin.css')}}">
   <script src={{url_for('static',filename='layui/layui.js')}}></script>
+  <script src=""></script>
     <style>
     .radio-wrap {
       width: 500px;
@@ -96,6 +97,10 @@
       margin : auto 15px;
       padding: 15px;
     }
+    .vglis {
+      margin : auto 15px;
+      padding: 15px;
+    }
   </style>
 </head>
 
@@ -110,7 +115,7 @@
               Status
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Overview</a>
+              <a class="dropdown-item" href="www.baidu.com">Overview</a>
               <a class="dropdown-item" href="#">Firewall</a>
               <a class="dropdown-item" href="#">Routes</a>
               <a class="dropdown-item" href="#">System Log</a>
@@ -194,12 +199,15 @@
         </form>
       </div>
 
+<!--VG頁面-->
       <div class="tab-pane fade" id="trafffic" role="tabpanel" aria-labelledby="trafffic-tab">
-        <div class="pvlis"></div>
-        <input type="button" value="create VG" onclick="createvg()"/>
+
+        <div class="vglis">
+        <input type="button" value="create VG" onclick="vgcreate()"/>
         <input type="button" value="delete VG" onclick="deletevg()"/>
         <input type="button" value="scan VG" onclick="scanvg()"/>
-        <iframe scrolling="no" id="iframevg" frameborder="1" height="500px" width="100%"></iframe>
+        </div>
+        <iframe scrolling="no" id="iframevg" frameborder="0" height="500px" width="100%"></iframe>
         <!-- 第三個頁面 -->
       </div>
       <div class="tab-pane fade" id="custom" role="tabpanel" aria-labelledby="custom-tab">
@@ -220,6 +228,21 @@
 </body>
 
 <script type="text/javascript">
+function vgs(){
+var vgs = document.getElementById("iframevg");
+vgs.src = "{{url_for('web_vgs')}}";
+}
+function vgcreate(){
+var vgcreate = document.getElementById("iframevg");
+vgcreate.src = "{{url_for('web_vgcreate')}}";
+}
+function vgremove(){
+var vgremove = document.getElementById("iframevg");
+vgremove.src = "{{url_for('web_vgremove')}}"
+}
+
+
+
 function pvs(){
 var pvs = document.getElementById("iframepv");
 pvs.src = "{{url_for('web_pvs')}}";
@@ -262,6 +285,16 @@ $(function(){
     })
 </script>
 
+<script type="text/javascript">
+    $("input[name='disk-name']").change(function(){
+      var result = ' ';
+      $("input[name='disk-name']:checked").each(function(){
+          result+=$(this).val()+',';
+      })
+      $('#hidden').val(result);
+    });
+  </script>
+
 <script>
 
   $("#test").click(function(){
@@ -280,6 +313,8 @@ $(function(){
         maxmin: true,
         content: '{{url_for("layer_table")}}'
       });
+
+
       const data_show = {{ Diskdata_pv|safe }}
       const radioWrap = $('#radioWrap')
       let roiadhtml = ''
@@ -306,6 +341,8 @@ $(function(){
       }
       radioWrap.html(roiadhtml)
           },
+
+
     error:function () {
         alert("接收失败")
        }
@@ -381,15 +418,6 @@ for(let i = 0; i < data_show.length; i++) {
 radioWrap.append(roiadhtml)
 </script>
 
-<script type="text/javascript">
-    $("input[name='disk-name']").change(function(){
-      var result = ' ';
-      $("input[name='disk-name']:checked").each(function(){
-          result+=$(this).val()+',';
-      })
-      $('#hidden').val(result);
-    });
-  </script>
 
 <script>
     const data = {{Diskdata|safe}}
