--- a/templates/vg/vg.html
+++ b/templates/vg/vg.html
@@ -121,6 +121,7 @@ function vgrem(){
       <option value="${vgdata[i]}">${vgdata[i]}</option>
       `
     }
+    alert(vghtml)
     selectvg.append(vghtml)
 
 </script>
