--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>网页管理系统磁盘</title>
+  <title>网页管理LVM</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{url_for('static',filename='layui/css/layui.css')}}">
   <link rel="stylesheet" href="{{url_for('static',filename='css/admin.css')}}">
@@ -229,8 +229,6 @@ function vgremove(){
 var vgremove = document.getElementById("iframevg");
 vgremove.src = "{{url_for('web_vgremove')}}"
 }
-
-
 
 function pvs(){
 var pvs = document.getElementById("iframepv");
