--- a/lvm_flask/templates/lvmInstall.html
+++ b/lvm_flask/templates/lvmInstall.html
@@ -1,1 +1,7 @@
 {% extends 'htmlModel/base.html' %}
+
+{% block title %}网页安装LVM{% endblock %}
+
+{% block page_content%}
+<h1>This is Web Install LVM</h1>
+{% endblock %}
