--- a/lvm_flask/templates/lvmStart.html
+++ b/lvm_flask/templates/lvmStart.html
@@ -1,1 +1,11 @@
 {% extends 'htmlModel/base.html' %}
+
+{% block title %}网页管理LVM{% endblock %}
+
+<!--{% block page_content %}-->
+
+<!--<h1>This is Web show Lvm overview</h1>-->
+<!--<hr>-->
+<!--<div id="diskShow">test</div>-->
+
+<!--{% endblock %}-->
