--- a/lvm_flask/static/myCSS.css
+++ b/lvm_flask/static/myCSS.css
@@ -1,7 +1,10 @@
 
 #diskShow {
-    width: 100px;
-    height: 100px;
-    border: 1px soild #000;
-    border-radius: 10px;
+    width:100%;
+    height:300px;
+    border:1px solid #000;
+    border-radius: 20px;
+}
+#nav-home {
+    width: 200px;
 }
