--- a/lvm_flask/templates/lvmStart.html
+++ b/lvm_flask/templates/lvmStart.html
@@ -1,11 +1,13 @@
 {% extends 'htmlModel/base.html' %}
 
-{% block title %}网页管理LVM{% endblock %}
+{% block title %}<title>网页管理LVM</title>{% endblock %}
 
-<!--{% block page_content %}-->
+{% block page_content %}
+<br>
+<h3>Disk:</h3>
+<hr>
+<div id="diskShow" style="width:100%;height:300px;border:1px solid #000;border-radius: 20px;">
+    test
+</div>
 
-<!--<h1>This is Web show Lvm overview</h1>-->
-<!--<hr>-->
-<!--<div id="diskShow">test</div>-->
-
-<!--{% endblock %}-->
+{% endblock %}
